2002-01-27  Bart Schaefer  <schaefer@zsh.org>

	* 16400, 16401: Src/subst.c: preserve empty words that result from
	brace expansion.

	* 16215: Src/subst.c: save and restore mult_isarr in singsub().

	* 16201: Src/params.c, Src/utils.c, Src/zsh.h: introduce the
	PM_NAMEDDIR flag to mark parameters for which a value change
	should be reflected in the named directory table.

2002-01-23  Bart Schaefer  <schaefer@zsh.org>

	* 16435: Src/builtin.c: Fix core dump in `hash'.

	* 16419: Doc/Zsh/compsys.yo: Document some _arguments options
	in the syntax summary line.

2001-01-16  Clint Adams  <clint@zsh.org>

	* Matt Zimmerman: 16463: Completion/Debian/Command/_apt:
	completion for apt-cache showsrc.

2001-12-26  Clint Adams  <clint@zsh.org>

        * 16375: Completion/Unix/Command/.distfiles,
        Completion/Unix/Command/_fsh: command completion for fsh.

2001-12-21  Geoff Wing  <gcw@zsh.org>

	* 16332: zshconfig.ac, Config/defs.mk.in, Src/Makefile.in,
	Src/Makemod.in.in, Src/ansi2knr.c: remove ansi2knr.c from our
	repository due to licence differences.  Adjust the build process
	accordingly.  configure will now abort if the user requests ansi2knr
	but no ansi2knr is available

2001-12-18  Oliver Kiddle  <opk@zsh.org>

	* 16364: Src/params.c: further to 16351, except specials
	from having their value set to null

2001-12-17  Oliver Kiddle  <opk@zsh.org>

	* 16351: Src/params.c: fix bug in parameter unset code

2001-12-14  Clint Adams  <clint@zsh.org>

        * 16336: Completion/Debian/Type/_deb_packages:
        use apt-cache --generate pkgnames instead of
        apt-cache dumpavail.

        * 16335: Completion/Debian/Command/_apt:
        add -g, --all-names, --recurse, pkgnames, dotty, policy
        completions for apt-cache.

2001-12-11  Clint Adams  <clint@zsh.org>

	* 16327: Completion/Debian/Command/_dpkg: glob for udebs
	as well as debs.

        * 16326: Completion/Unix/Command/_webbrowser,