@@ -1,3 +1,8 @@
+2002-01-27  Clint Adams  <clint@zsh.org>
+
+	* 16504: Src/builtin.c: warn on fclose or fflush
+	errors in bin_print.
+
 2002-01-27  Bart Schaefer  <schaefer@zsh.org>
 
 	* 16400, 16401: Src/subst.c: preserve empty words that result from
